Create a website template

--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
         <link rel='stylesheet' href='styles/styles.css'/>
     </head>
     <body>
+        <header>
+            <div class="logo">
+                <img scr='#'/>
+                <div class="logoText">
+                    <p></p>
+                </div>
+            </div>
+        
+            <div class="rules">
+                <a href="#">Rules</a>
+            </div>
+        </header>
+        <div class="middle">
+            <div class="scoreH"></div>
+            <div class="scoreC"></div>
+            <div class="table">
+                <div class="scissors"></div>
+                <div class="paper"></div>
+                <div class="rock"></div>
+            </div>
+        </div>
+        <footer></footer>
         <script src='scripts/scripts.js'></script>
     </body>
 </html>
