Create styles for header and fix header

--- a/index.html
+++ b/index.html
@@ -8,16 +8,7 @@
     </head>
     <body>
         <header>
-            <div class="logo">
-                <img scr='#'/>
-                <div class="logoText">
-                    <p></p>
-                </div>
-            </div>
-        
-            <div class="rules">
-                <a href="#">Rules</a>
-            </div>
+            <p>Rock Paper Scissors</p>
         </header>
         <div class="middle">
             <div class="scoreH"></div>
