Create middle styles,refine the layout of the site

--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
             <p>Rock Paper Scissors</p>
         </header>
         <div class="middle">
-            <div class="scoreH"></div>
-            <div class="scoreC"></div>
+            <div class="scoreH">0</div>
+            <div class="scoreC">0</div>
             <div class="table">
-                <div class="scissors"></div>
-                <div class="paper"></div>
-                <div class="rock"></div>
+                <div class="button scissors">S</div>
+                <div class="button winner"></div>
+                <div class="button paper">P</div>
+                <div class="button rock">R</div>
             </div>
         </div>
         <footer></footer>
