Add icons and styles for buttons,winner panel

--- a/index.html
+++ b/index.html
@@ -14,10 +14,30 @@
             <div class="scoreH">0</div>
             <div class="scoreC">0</div>
             <div class="table">
-                <div class="button scissors">S</div>
-                <div class="button winner"></div>
-                <div class="button paper">P</div>
-                <div class="button rock">R</div>
+                <figure>
+                    <div class="button scissors">
+                        <img src='images/scissors.svg' alt='scissors' width='160'/>
+                    </div>
+                </figure>
+
+                <figure>
+                    <div class="button winner">
+                        <img src='images/computer.svg' alt='computer' width='80'/>
+                        <figcaption>Computer win.</figcaption>
+                    </div>
+                </figure>
+
+                <figure>
+                    <div class="button paper">
+                        <img src='images/paper.svg' alt='paper' width='160'/>
+                    </div>
+                </figure>
+
+                <figure>
+                    <div class="button rock">
+                        <img src='images/rock.svg' alt='rock' width='160'/>
+                    </div>
+                </figure>
             </div>
         </div>
         <footer></footer>
