Create adaptive middle styles

--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
             <div class="table">
                 <figure>
                     <div class="button scissors">
-                        <img src='images/scissors.svg' alt='scissors' width='160'/>
+                        <img class='icon' src='images/scissors.svg' alt='scissors'/>
                     </div>
                 </figure>
 
                 <figure>
                     <div class="button winner">
-                        <img src='images/computer.svg' alt='computer' width='80'/>
-                        <figcaption>Computer win.</figcaption>
+                        <!--<img class='icon' src='images/computer.svg' alt='computer' />
+                        <figcaption>Computer win.</figcaption>-->
                     </div>
                 </figure>
 
                 <figure>
                     <div class="button paper">
-                        <img src='images/paper.svg' alt='paper' width='160'/>
+                        <img class='icon' src='images/paper.svg' alt='paper'/>
                     </div>
                 </figure>
 
                 <figure>
                     <div class="button rock">
-                        <img src='images/rock.svg' alt='rock' width='160'/>
+                        <img class='icon' src='images/rock.svg' alt='rock'/>
                     </div>
                 </figure>
             </div>
