Add auditions to each game sign

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="scoreC">0</div>
             <div class="table">
                 <figure>
-                    <div class="button scissors">
+                    <div class="button scissors" data-number = '2'>
                         <img class='icon' src='images/scissors.svg' alt='scissors'/>
                     </div>
                 </figure>
@@ -28,13 +28,13 @@
                 </figure>
 
                 <figure>
-                    <div class="button paper">
+                    <div class="button paper" data-number = "1">
                         <img class='icon' src='images/paper.svg' alt='paper'/>
                     </div>
                 </figure>
 
                 <figure>
-                    <div class="button rock">
+                    <div class="button rock" data-number = '3'>
                         <img class='icon' src='images/rock.svg' alt='rock'/>
                     </div>
                 </figure>
