Create a changing winner icon

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 </figure>
 
                 <figure>
-                    <div class="button winner">
-                        <!--<img class='icon' src='images/computer.svg' alt='computer' />
-                        <figcaption>Computer win.</figcaption>-->
+                    <div class="winner">
+                        <img class='icon winnerIcon' src='' alt='' />
+                        <figcaption>Computer win.</figcaption>
                     </div>
                 </figure>
 
